--- a/search-compare.html
+++ b/search-compare.html
@@ -67,12 +67,15 @@
                 <div class="text-white bg--image--content bg-black bg-opacity-50">
                     <div class="container">
                         <div class="pt-5 pb-4">
+                            <div class="d-flex mb-3"><a class="btn btn-primary d-flex align-items-center px-3" role="button" href="search-offers.html"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-left me-2 mt--n3">
+                                        <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"></path>
+                                    </svg><span class="line-height-none">Powrót do listy ofert</span></a></div>
                             <h1 class="mb-0">Wybrane oferty</h1>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="bg-light pt-4 mb-4 border-bottom">
+            <div class="pt-4 border-bottom bg-light">
                 <div class="container">
                     <ul class="nav nav-tabs justify-content-center">
                         <li class="nav-item"><a class="nav-link active" href="#!">Gospodarstwo domowe</a></li>
@@ -80,46 +83,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="mb-4">
-                <div class="container">
-                    <div class="border py-3 px-3">
-                        <div class="row justify-content-between align-items-center flex-nowrap">
-                            <div class="col">
-                                <div class="row gy-3 flex-wrap">
-                                    <div class="col-auto d-flex align-items-center"><input type="text" class="form-control text-center h-100 py-2" value="91-492" style="width: 90px;"><label class="form-label fw-bold mb-0 ms-3">Łódź</label></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">OSD</label><select class="form-select h-100 py-2" style="width: 88.188px;">
-                                            <option value="">PGE</option>
-                                            <option value="">Inny operator 1</option>
-                                            <option value="">Inny operator 2</option>
-                                            <option value="">Inny operator 3</option>
-                                        </select></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Zużycie miesięczne (kWh)</label><input type="number" class="form-control text-center h-100 py-2" value="1200" style="width: 90px;"></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Cykl</label><select class="form-select py-2" style="width: 150.297px;">
-                                            <option value="">Równomierny</option>
-                                            <optgroup label="Zróżnicowany">
-                                                <option value="">Zróżnicowany łatwy</option>
-                                                <option value="">Zróżnicowany średni</option>
-                                                <option value="">Zróżnicowany trudny</option>
-                                            </optgroup>
-                                        </select><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-info-circle fs-5 ms-2">
-                                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>
-                                            <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>
-                                        </svg></div>
-                                    <div class="col-auto d-flex align-items-center"><label class="form-label fw-bold mb-0 me-3">Moc umowna kW</label><input type="number" class="form-control text-center h-100 py-2" value="5.5" style="width: 110px;"></div>
-                                </div>
-                            </div>
-                            <div class="col-auto">
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item"><a class="nav-link px-3" href="search-compare.html"><span class="text-body d-flex align-items-center mx-n1"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-plus-lg mx-1">
-                                                    <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"></path>
-                                                </svg><span class="mx-1">Kalkulator</span><span class="badge bg-dark mx-1 px-2 rounded-pill">1</span></span></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="mb-4">
+            <div class="mb-4 mt-4">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col">
@@ -272,8 +236,8 @@
                                                 <div class="table-responsive">
                                                     <table class="table table-sm table-bordered mb-0">
                                                         <tbody>
-                                                            <tr>
-                                                                <th class="bg-light" colspan="3">Opłaty za kupno prądu</th>
+                                                            <tr class="bg-primary text-white">
+                                                                <th colspan="3">Opłaty za kupno prądu</th>
                                                             </tr>
                                                             <tr>
                                                                 <th>Prąd zużyty w godzinach szczytu</th>
@@ -290,12 +254,12 @@
                                                                 <td></td>
                                                                 <td class="text-nowrap text-end">50.00</td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr class="bg-light">
                                                                 <th colspan="2">Suma opłat zmiennych</th>
                                                                 <td class="text-nowrap text-end fw-bold">544.84</td>
                                                             </tr>
-                                                            <tr>
-                                                                <th class="bg-light" colspan="3">Opłaty za przesył</th>
+                                                            <tr class="bg-primary text-white">
+                                                                <th colspan="3">Opłaty za przesył</th>
                                                             </tr>
                                                             <tr>
                                                                 <th>Zmienna sieciowa w godzinach szczytu</th>
@@ -332,12 +296,12 @@
                                                                 <td></td>
                                                                 <td class="text-nowrap text-end">1.60</td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr class="bg-light">
                                                                 <th colspan="2">Suma opłat stałych</th>
                                                                 <td class="text-nowrap text-end fw-bold">405.19</td>
                                                             </tr>
                                                         </tbody>
-                                                        <tfoot class="bg-light">
+                                                        <tfoot class="bg-lightblue">
                                                             <tr>
                                                                 <th class="text-start" colspan="2">Razem</th>
                                                                 <td class="text-nowrap text-end fw-bold">1000 zł</td>
@@ -350,8 +314,8 @@
                                                 <div class="table-responsive">
                                                     <table class="table table-sm table-bordered mb-0">
                                                         <tbody>
-                                                            <tr>
-                                                                <th class="bg-light" colspan="3">Opłaty za kupno prądu</th>
+                                                            <tr class="bg-primary text-white">
+                                                                <th colspan="3">Opłaty za kupno prądu</th>
                                                             </tr>
                                                             <tr>
                                                                 <th>Prąd zużyty w godzinach szczytu</th>
@@ -368,12 +332,12 @@
                                                                 <td></td>
                                                                 <td class="text-nowrap text-end">50.00</td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr class="bg-light">
                                                                 <th colspan="2">Suma opłat zmiennych</th>
                                                                 <td class="text-nowrap text-end fw-bold">544.84</td>
                                                             </tr>
-                                                            <tr>
-                                                                <th class="bg-light" colspan="3">Opłaty za przesył</th>
+                                                            <tr class="bg-primary text-white">
+                                                                <th colspan="3">Opłaty za przesył</th>
                                                             </tr>
                                                             <tr>
                                                                 <th>Zmienna sieciowa w godzinach szczytu</th>
@@ -410,12 +374,12 @@
                                                                 <td></td>
                                                                 <td class="text-nowrap text-end">1.60</td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr class="bg-light">
                                                                 <th colspan="2">Suma opłat stałych</th>
                                                                 <td class="text-nowrap text-end fw-bold">405.19</td>
                                                             </tr>
                                                         </tbody>
-                                                        <tfoot class="bg-light">
+                                                        <tfoot class="bg-lightblue">
                                                             <tr>
                                                                 <th class="text-start" colspan="2">Razem</th>
                                                                 <td class="text-nowrap text-end fw-bold">1000 zł</td>
@@ -428,8 +392,8 @@
                                                 <div class="table-responsive">
                                                     <table class="table table-sm table-bordered mb-0">
                                                         <tbody>
-                                                            <tr>
-                                                                <th class="bg-light" colspan="3">Opłaty za kupno prądu</th>
+                                                            <tr class="bg-primary text-white">
+                                                                <th colspan="3">Opłaty za kupno prądu</th>
                                                             </tr>
                                                             <tr>
                                                                 <th>Prąd zużyty w godzinach szczytu</th>
@@ -446,12 +410,12 @@
                                                                 <td></td>
                                                                 <td class="text-nowrap text-end">50.00</td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr class="bg-light">
                                                                 <th colspan="2">Suma opłat zmiennych</th>
                                                                 <td class="text-nowrap text-end fw-bold">544.84</td>
                                                             </tr>
-                                                            <tr>
-                                                                <th class="bg-light" colspan="3">Opłaty za przesył</th>
+                                                            <tr class="bg-primary text-white">
+                                                                <th colspan="3">Opłaty za przesył</th>
                                                             </tr>
                                                             <tr>
                                                                 <th>Zmienna sieciowa w godzinach szczytu</th>
@@ -488,12 +452,12 @@
                                                                 <td></td>
                                                                 <td class="text-nowrap text-end">1.60</td>
                                                             </tr>
-                                                            <tr>
+                                                            <tr class="bg-light">
                                                                 <th colspan="2">Suma opłat stałych</th>
                                                                 <td class="text-nowrap text-end fw-bold">405.19</td>
                                                             </tr>
                                                         </tbody>
-                                                        <tfoot class="bg-light">
+                                                        <tfoot class="bg-lightblue">
                                                             <tr>
                                                                 <th class="text-start" colspan="2">Razem</th>
                                                                 <td class="text-nowrap text-end fw-bold">1000 zł</td>
