--- a/search-offers.html
+++ b/search-offers.html
@@ -80,7 +80,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="mb-4 py-4 border-bottom bg-lightblue mt--n1">
+            <div class="mb-4 py-4 bg-lightblue mt--n1">
                 <div class="container">
                     <div>
                         <div class="row justify-content-between flex-nowrap">
@@ -189,7 +189,7 @@
                                 <tr>
                                     <td class="text-center p-0" colspan="10">
                                         <div class="card text-start shadow-none rounded-0 mt--n1">
-                                            <div class="card-header rounded-0 bg-lightblue">
+                                            <div class="card-header rounded-0 bg-lightblue border-0">
                                                 <div class="row justify-content-between align-items-center">
                                                     <div class="col-auto">
                                                         <h5 class="mb-0">Oferta promocyjna ,,Czysta energia od Orange IV- Pakiet faktura 300’’</h5>
@@ -200,11 +200,11 @@
                                                                         <path d="M5 4a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1H5zm0 2a.5.5 0 0 0 0 1h3a.5.5 0 0 0 0-1H5z"></path>
                                                                         <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"></path>
                                                                     </svg><span>Cennik</span></button></div>
-                                                            <div class="col-auto"><button class="btn btn-sm d-flex align-items-center rounded-pill btn-lightblue text-primary" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-file-medical me-2 ms-n1">
+                                                            <div class="col-auto"><button class="btn btn-light btn-sm d-flex align-items-center rounded-pill text-primary" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-file-medical me-2 ms-n1">
                                                                         <path d="M8.5 4.5a.5.5 0 0 0-1 0v.634l-.549-.317a.5.5 0 1 0-.5.866L7 6l-.549.317a.5.5 0 1 0 .5.866l.549-.317V7.5a.5.5 0 1 0 1 0v-.634l.549.317a.5.5 0 1 0 .5-.866L9 6l.549-.317a.5.5 0 1 0-.5-.866l-.549.317V4.5zM5.5 9a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zm0 2a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5z"></path>
                                                                         <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm10-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"></path>
                                                                     </svg><span>Regulamin</span></button></div>
-                                                            <div class="col-auto"><button class="btn btn-light btn-sm d-flex align-items-center rounded-pill" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-check me-2 ms-n1">
+                                                            <div class="col-auto"><button class="btn btn-sm d-flex align-items-center rounded-pill btn-white" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-person-check me-2 ms-n1">
                                                                         <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"></path>
                                                                         <path fill-rule="evenodd" d="M15.854 5.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 0 1 .708-.708L12.5 7.793l2.646-2.647a.5.5 0 0 1 .708 0z"></path>
                                                                     </svg><span>Kontakt</span></button></div>
@@ -367,7 +367,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="card-footer">
+                                            <div class="card-footer bg-light">
                                                 <div class="row justify-content-between align-items-center">
                                                     <div class="col-auto"><button class="btn btn-outline-primary border-1 d-flex align-items-center" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-chevron-up me-2">
                                                                 <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"></path>
