--- a/page-news.html
+++ b/page-news.html
@@ -87,9 +87,9 @@
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Czytaj dalej</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -104,9 +104,9 @@
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Czytaj dalej</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -121,9 +121,9 @@
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Czytaj dalej</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -138,9 +138,9 @@
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Czytaj dalej</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
