--- a/page-documents-category.html
+++ b/page-documents-category.html
@@ -67,7 +67,8 @@
                 <div class="text-white bg--image--content bg-black bg-opacity-50">
                     <div class="container">
                         <div class="pt-5 pb-4">
-                            <h1 class="mb-0">Akty prawne</h1>
+                            <p class="text-uppercase fw-bold text-white mb-0 text-opacity-50">Akty prawne</p>
+                            <h1 class="mb-0">Tytuł kategorii</h1>
                         </div>
                     </div>
                 </div>
@@ -111,7 +112,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -150,7 +151,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -189,7 +190,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -228,7 +229,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -267,7 +268,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
