--- a/page-documents.html
+++ b/page-documents.html
@@ -111,7 +111,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -150,7 +150,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -189,7 +189,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -228,7 +228,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -267,7 +267,7 @@
                                                                 </tbody>
                                                             </table>
                                                         </div>
-                                                        <div class="mt-3"><button class="btn btn-primary btn-sm" type="button">Pobierz PDF</button></div>
+                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="#!">Pobierz plik</a></div>
                                                     </div>
                                                 </div>
                                             </div>
